--- a/app.json
+++ b/app.json
@@ -1,5 +1,6 @@
 {
     "pages": [
+        "pages/home/home",
         "pages/fVVY0Fw2ZP_page10000/fVVY0Fw2ZP_page10000",
         "pages/fVVY0Fw2ZP_page10001/fVVY0Fw2ZP_page10001",
         "pages/fVVY0Fw2ZP_page10002/fVVY0Fw2ZP_page10002",
@@ -82,6 +83,10 @@
         }
     ],
     "window": {
+        "backgroundTextStyle": "light",
+        "navigationBarBackgroundColor": "#fff",
+        "navigationBarTitleText": "泡沫小飞机",
+        "navigationBarTextStyle": "black",
         "enablePullDownRefresh": false,
         "onReachBottomDistance": "50"
     },
@@ -92,20 +97,26 @@
         "backgroundColor": "#F6F6F6",
         "list": [
             {
-                "iconPath": "images/5abb450a99660.png",
-                "selectedIconPath": "images/5abb450a996b0.png",
+                "iconPath": "images/normal/首页.png",
+                "selectedIconPath": "images/hover/首页.png",
                 "text": "首页",
                 "pagePath": "pages/fVVY0Fw2ZP_page10000/fVVY0Fw2ZP_page10000"
             },
             {
-                "iconPath": "images/5abb450ad0d18.png",
-                "selectedIconPath": "images/5abb450ad0d69.png",
+                "iconPath": "images/normal/统计.png",
+                "selectedIconPath": "images/hover/统计.png",
+                "text": "统计",
+                "pagePath": "pages/tabbarShoppingCart/tabbarShoppingCart"
+            },
+            {
+                "iconPath": "images/normal/购物车.png",
+                "selectedIconPath": "images/hover/购物车.png",
                 "text": "购物车",
                 "pagePath": "pages/tabbarShoppingCart/tabbarShoppingCart"
             },
             {
-                "iconPath": "images/5abb450ae72af.png",
-                "selectedIconPath": "images/5abb450ae72ff.png",
+                "iconPath": "images/normal/用户.png",
+                "selectedIconPath": "images/hover/用户.png",
                 "text": "我的",
                 "pagePath": "pages/fVVY0Fw2ZP_page10002/fVVY0Fw2ZP_page10002"
             }
