增加产品详情更多页。

--- a/app.json
+++ b/app.json
@@ -20,6 +20,7 @@
         "pages/tabbarShoppingCart/tabbarShoppingCart",
         "pages/tabbarMyOrder/tabbarMyOrder",
         "pages/goodsDetail/goodsDetail",
+        "pages/goodsDetailMore/goodsDetailMore",
         "pages/userCenter/userCenter",
         "pages/groupGoodsDetail/groupGoodsDetail",
         "pages/classifyGoodsListPage/classifyGoodsListPage"
